# Flare

./: .clangd  .gitignore  CMakeLists.txt  README.md  reestructure.sh  test_tokenization
.cache/clangd/index/: CommandMetaData.h.63D2E948696F49B6.idx  DataError.h.16652C1453C6EC3F.idx  OptionMetaData.h.0A3EC9FC2D789B79.idx  Token.h.805EA4382FC21326.idx  TokenGroup.h.BCC25187D0911F9F.idx  TypeToken.h.2501AC41530CD4FF.idx  ValidationError.h.2F7FBC65C82BB2EF.idx  ValuePolicy.h.C5BE079C09492FE7.idx  ValueType.h.D3485CF5DA278DA7.idx  classification.cpp.E7D24834F0FAC2D1.idx  classification.h.95E578633F207BAB.idx  command_registry.cpp.504A787A9652FF51.idx  command_registry.h.4D04A7AA6A453A0D.idx  data_error_register.cpp.8238DBA7DC46A93A.idx  data_error_register.h.78FCB9A6BE62F502.idx  date_validator.cpp.31D9E299E630C670.idx  date_validator.h.FF70CF81B25D9C4C.idx  error_registry.cpp.4E82FB7E77EB1D35.idx  error_registry.h.557A615BB0D4B2A2.idx  execution.cpp.20A1F85CC6319937.idx  execution.h.86ACB3B9A5706BDE.idx  list.cpp.41E0438DD14F4252.idx  list.h.874CFA14AA3C60E6.idx  main.cpp.8481ADC69DF67CEB.idx  option_registry.cpp.8D13E6900ADC213C.idx  option_registry.h.691EB3A1B65FC81A.idx  print_error.cpp.AD6654DB8970ECD0.idx  print_error.h.28743A25E071F127.idx  register_all.cpp.0CA8EBD08D3A3FBC.idx  register_all.cpp.DBF27B4664A1746A.idx  register_all.h.A600683C71B0C107.idx  register_all.h.BD1979E82060B2A7.idx  string_utils.cpp.684FD955AF3B1B3A.idx  string_utils.h.85B8BC460E53BBD0.idx  tokenization.cpp.86B2522458FD9498.idx  tokenization.h.E10AE7BC1FDF91D5.idx  validation.cpp.857BCA71435E1C24.idx  validation.h.747BFE9122C76A8C.idx
src/: main.cpp
src/Commands/CommandList/: list.cpp  list.h
src/PipelineProcees/ProccesOfClasification/: ProceesOfClasification.h
src/PipelineProcees/ProccesOfTokenization/: ProccesOfTokenization.h  ProceesOfTokenization.cpp
src/PipelineProcees/ProccessOfExcute/: Execute.cpp  Execute.h
src/Resources/: GlobalVariables.h  tokenization.h  validation.h
src/SystemUtilites/MessageErrorDetail/: MessageError.cpp  MessageError.h
src/SystemUtilites/MessageErrorDetail/PrintErroDetail/: PrintErrorDetail.cpp  PrintErrorDetail.h
src/SystemUtilites/Structs/: DataError.h
src/Utils/RegisterAllCommands/: RegisterAllCommands.h
src/commands/: README.md
src/commands/list/: list.cpp  list.h
src/commands/list/handlers/: filter_hanlder.cpp  modifier_handlers.cpp
src/core/: README.md
src/core/classification/: classification.cpp  classification.h
src/core/execution/: execution.cpp  execution.h
src/core/tokenization/: tokenization.cpp  tokenization.h
src/core/validation/: validation.cpp  validation.h
src/system/: README.md
src/system/errors/: data_error_register.cpp  data_error_register.h  print_error.cpp  print_error.h
src/system/registry/command/: command_registry.cpp  command_registry.h  register_all.cpp  register_all.h
src/system/registry/error/: error_registry.cpp  error_registry.h
src/system/registry/option/: option_registry.cpp  option_registry.h  register_all.cpp  register_all.h
src/system/registry/option/handlers/: filter_hanlder.cpp
src/system/types/: CommandMetaData.h  DataError.h  OptionContex.h  OptionMetaData.h  OptionProcessType.h  Token.h  TokenGroup.h  TypeToken.h  ValidationError.h  ValuePolicy.h  ValueType.h
src/utils/: ParseStringDate.cpp  README.md  date_validator.cpp  date_validator.h  string_utils.cpp  string_utils.h
tests/: README.md  TokenizationTest.cpp
